<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:context=".HomeFragment">

    <ScrollView
        android:id="@+id/home_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ic_home_place_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_home_place_pin"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_city"
                app:layout_constraintEnd_toStartOf="@+id/tv_home_city"
                app:layout_constraintTop_toTopOf="@+id/tv_home_city" />

            <TextView
                android:id="@+id/tv_home_city"
                style="@style/TVMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/tv_home_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_home_arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_home_arrow_down"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_city"
                app:layout_constraintStart_toEndOf="@id/tv_home_city"
                app:layout_constraintTop_toTopOf="@+id/tv_home_city" />

            <ImageView
                android:id="@+id/ic_home_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:src="@drawable/ic_home_filter"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_city" />

            <TextView
                android:id="@+id/tv_home_select_category"
                style="@style/rv_best_seller_tv_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/select_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_city" />

            <TextView
                android:id="@+id/tv_home_view_all_category"
                style="@style/TVRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/view_all"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_select_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_home_select_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_select_category"
                tools:listitem="@layout/item_category" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/home_searchview"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_select_category" />

            <ImageView
                android:id="@+id/ic_home_qr_circle"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="11dp"
                android:src="@drawable/ic_circle_primary"
                app:layout_constraintBottom_toBottomOf="@+id/home_searchview"
                app:layout_constraintStart_toEndOf="@+id/home_searchview"
                app:layout_constraintTop_toTopOf="@+id/home_searchview" />

            <ImageView
                android:id="@+id/ic_home_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qr"
                app:layout_constraintBottom_toBottomOf="@id/ic_home_qr_circle"
                app:layout_constraintEnd_toEndOf="@id/ic_home_qr_circle"
                app:layout_constraintStart_toStartOf="@id/ic_home_qr_circle"
                app:layout_constraintTop_toTopOf="@id/ic_home_qr_circle" />

            <TextView
                android:id="@+id/tv_home_hot_sales_header"
                style="@style/rv_best_seller_tv_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="18dp"
                android:text="@string/hot_sales_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_searchview" />

            <TextView
                android:id="@+id/tv_home_see_more"
                style="@style/TVRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/see_more"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_hot_sales_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_hot_sales_header" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpager_hame_hot_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_hot_sales_header" />

            <TextView
                android:id="@+id/tv_home_best_seller"
                style="@style/rv_best_seller_tv_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:text="@string/best_seller_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vpager_hame_hot_sales" />

            <TextView
                android:id="@+id/tv_home_see_more_1"
                style="@style/TVRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/see_more"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_best_seller"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_best_seller" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_best_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="73dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_best_seller"
                app:spanCount="2"
                tools:listitem="@layout/item_best_seller" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/bottom_nav_bar"
        layout="@layout/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <include
        android:id="@+id/filter_options_card"
        layout="@layout/filter_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>